--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:back": "nodemon server.js",
     "dev:front": "vite",
     "dev": "concurrently \"npm run dev:back\" \"npm run dev:front\"",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "start": "node server.js"
   },
   "repository": {
@@ -24,12 +24,22 @@
   },
   "homepage": "https://github.com/Solremi/maureenetjeremie.fr#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "i": "^0.3.7",
     "node": "^20.14.0",
+    "nodemon": "^3.1.3",
     "pg": "^8.12.0",
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "sass": "^1.77.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13"
   }
 }
