--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
