--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "homepage": "https://github.com/Solremi/maureenetjeremie.fr#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jwt-decode": "^4.0.0",
     "node": "^20.14.0",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
