--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-PORT=
-SESSION_SECRET=
+PORT=5000   
+SESSION_SECRET=jenesaispasquoimettrededansmisapartnuimportesquoiquecesoit
 
-DB_USER=
-DB_HOST=
-DB_NAME=
-DB_PASSWORD=
-DB_PORT=
+EMAIL_USER=jeremie.rocquet@outlook.fr
+EMAIL_PASS=
 
-RVITE_API_URL=
-REACT_APP_SOCKET_URL=
+DB_USER=solremi  
+DB_HOST=localhost
+DB_NAME=mariage
+DB_PASSWORD=solremi
+DB_PORT=5432
+
+REACT_APP_API_URL=http://localhost:5000
+REACT_APP_SOCKET_URL=http://localhost:5173/api
