--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jwt-decode": "^4.0.0",
@@ -39,7 +40,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
