--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
