--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -42,6 +43,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "semantic-ui-react": "^2.1.5",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
