--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.18.0",
     "jwt-decode": "^4.0.0",
     "node": "^20.15.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "react": "^18.3.1",
