--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
     "semantic-ui-react": "^2.1.5",
+    "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
