--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "maureenetjeremie.fr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:back": "nodemon server.js",
     "dev:front": "vite",
     "dev": "concurrently \"npm run dev:back\" \"npm run dev:front\"",
-    "build": "tsc && vite build",
+    "build": " tsc && vite build",
     "start": "node server.js"
   },
   "repository": {
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Solremi/maureenetjeremie.fr#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -35,17 +36,16 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jwt-decode": "^4.0.0",
-    "node": "^20.15.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
     "semantic-ui-react": "^2.1.5",
-    "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
@@ -53,8 +53,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "sass": "^1.77.6",
+    "sass": "^1.77.7",
     "typescript": "^5.5.3",
-    "vite": "^5.3.2"
+    "vite": "^5.3.3"
   }
 }
