--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,5 +5,11 @@
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "client/**/*.ts",
+    "client/**/*.tsx",
+  ],
+  "exclude": [
+    "vite.config.ts" // Exclure le fichier de configuration Vite
+  ]
 }
