--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,7 @@
 PORT=5000   
 SESSION_SECRET=jenesaispasquoimettrededansmisapartnuimportesquoiquecesoit
+NODE_ENV=production
+
 
 EMAIL_USER=jeremie.rocquet@outlook.fr
 EMAIL_PASS='Mhenji44#outlook'
