--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "fireworks-js": "^2.10.7",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
