--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
@@ -55,6 +56,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.1",
     "sass": "^1.77.7",
     "typescript": "^5.5.3",
