--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.20.2",
     "bulma": "^1.0.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
