--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.1",
     "sass": "^1.77.7",
